# summer_school_jul14

./: README.md  vcharge_summer_school_1.py  vcharge_summer_school_2.py
exercise_motion_planning/: ipython_summer_school.sh.cde  start_vrep.sh  vcharge_summer_school.py
exercise_motion_planning/V-REP_PRO_EDU_V3_1_2_64_Linux/: bubbleRobClient  bubbleRobServer  credits.txt  externalIkDemo  libQt5Core.so.5.2  libQt5DBus.so.5.2  libQt5Network.so.5.2  libQt5OpenGL.so.5.2  libQt5OpenGL.so.5.2.0  libQt5PrintSupport.so.5.2  libQt5PrintSupport.so.5.2.0  libQt5Widgets.so.5  libicudata.so.51  libicui18n.so.51  libicuuc.so.51  libqscintilla2.so.9.0.2  mtbServer  readme.txt  rosBubbleRob  vrep.sh
exercise_motion_planning/cde-package/: cde.full-environment  cde.uname  ipython.cde
exercise_training_evaluation_classifiers/: train.sdf  train_small.sdf  validation.sdf
exercise_training_evaluation_classifiers/test/: Test-000225.pgm  Test-002697.pgm  Test-005089.pgm  Test-005999.pgm  Test-010199.pgm  Test-011070.pgm  Test-011263.pgm  (+3 more)
exercise_training_evaluation_classifiers/xboost/: CMakeLists.txt  Doxyfile  HISTORY.txt  ISSUE  README  TODO  pack.sh
exercise_training_evaluation_classifiers/xboost/include/: Common.h  DataSet.h  DataSetUtils.h  HaarClassifiers.h  HaarFeatureTools.h  HoGDataSet.h  IchnClassifiers.h  Image.h  IntegralImage.h  MultiClassDataSet.h  SourceDataSet.h  Test.h  Types.h  _stdint.h  xbversion.h
exercise_training_evaluation_classifiers/xboost/include/Classifier/: AbsDecisionStump.h  BayesianStump.h  BinaryClassifier.h  BoostClassifier.h  BoostableClassifier.h  DecisionStump.h  DecisionTree.h  HardCascade.h  HyperplaneClassifier.h  IndirectBinaryClassifier.h  IndirectDecisionTree.h  MultiClassClassifier.h  MultiClassDecisionStump.h  NaiveDecisionStump.h  RealDecisionStump.h  RealToDiscrete.h  SimpleDecisionStump.h  SingleTree.h  SoftCascade.h
exercise_training_evaluation_classifiers/xboost/include/Descriptor/: IntegralImageData.h  RawData.h
exercise_training_evaluation_classifiers/xboost/include/Feature/: CollapsedHaarFeature.h  HaarFeature.h  HoG.h  IntegralChannelFeature.h  JITHaarFeature.h  NormalizedHaarFeature.h  SumAreaFeature.h
exercise_training_evaluation_classifiers/xboost/include/FeatureGenerator/: FeatureGenerator.h  FeatureGeneratorUtils.h  HaarFeatureGenerator.h  HaarFeatureGenerators.h  IntegralChannelFeatureGenerator.h  IntegralChannelFeatureGenerators.h
exercise_training_evaluation_classifiers/xboost/include/GUI/: Window.h
exercise_training_evaluation_classifiers/xboost/include/IO/: datasetin.h  pnmio.h  sdfin.h
exercise_training_evaluation_classifiers/xboost/include/Oracle/: BayesianStumpOracle.h  BinaryClassifierOracle.h  DecisionTree.h  NaiveDecisionStumpOracle.h  PrecomputedBinaryClassifierOracle.h  RealDecisionStumpOracle.h  WeightedPatternResponse.h
exercise_training_evaluation_classifiers/xboost/include/Oracle/detail/: BinaryClassifierOptimize.h
exercise_training_evaluation_classifiers/xboost/include/Pattern/: Aggregator.h  Pattern.h  PrecomputedPatternResponse.h  WeightedPattern.h
exercise_training_evaluation_classifiers/xboost/include/Preprocessor/: HoGPreprocessor.h  IntegralChannelImagePreprocessor.h  IntegralImagePreprocessors.h
exercise_training_evaluation_classifiers/xboost/include/Thread/: bind.h  function.h  invoker.h  mutex.h  ref.h  thread.h  thread_group.h  tuple.h
exercise_training_evaluation_classifiers/xboost/include/Trainer/: AdaBoost.h  AdaBoostCommon.h  AdaBoostTrainer.h  DecisionTreeLearner.h  DiscreteAdaBoost.h  HoGCommon.h  InformationMetrics.h  SVM.h  SoftCascade.h
exercise_training_evaluation_classifiers/xboost/include/Traits/: HaarFeature.h  IntegralChannelFeature.h  Traits.h
exercise_training_evaluation_classifiers/xboost/include/Utility/: ColorSpaceConversions.h  GroupRectangles.h  HeatmapColorGenerator.h  ImageClassifierOperator.h  ImageSet.h  ImageUtils.h  NonMaximaSuppression.h  PrecomputedPatternResponseLoad.h  ResponseUtils.h  Time.h  TrainUtils.h  Utils.h  bitset.h  random.h  timer.h
exercise_training_evaluation_classifiers/xboost/include/factory/: ImageClassifier.h  ImageClassifierWrapper.h  ObjectDetector.h  ObjectDetectorWrapper.h  allocate.h  register.h
exercise_training_evaluation_classifiers/xboost/include/factory/detail/: ClassifierDetectorHelper.h  IntegralChannelImage.h  IntegralImage.h
exercise_training_evaluation_classifiers/xboost/src/: BoostHaarTools.cpp  Classify.cpp  ClassifyX.cpp  Common.cpp  ImageUtils.cpp  RegisterAllClassifier.cpp  Test.cpp  Tools.cpp  Trainer.cpp  Types.cpp  WeightedPatternResponse.cpp  dumpfeature.cpp  factory.cpp  mpi_trainer.cpp  ptrainer.cpp  random.cpp  roc.cpp  svm_classify.cpp  svm_convert.cpp  svm_solver.cpp  timer.cpp
exercise_training_evaluation_classifiers/xboost/src/Classifier/: ImageClassifier.cpp  SingleTree.cpp
exercise_training_evaluation_classifiers/xboost/src/Feature/: HaarFeature.cpp  HaarFeature.h  IntegralChannelFeature.cpp  NormalizedHaarFeature.cpp  SumAreaFeature.cpp
exercise_training_evaluation_classifiers/xboost/src/FeatureGenerator/: HaarFeatureGenerators.cpp  IntegralChannelFeatureGenerators.cpp
exercise_training_evaluation_classifiers/xboost/src/GUI/: Window.cpp  x11_driver.cpp
exercise_training_evaluation_classifiers/xboost/src/IO/: datasetin.cpp  pgmresize.cpp  pnmio.cpp  sdfin.cpp
exercise_training_evaluation_classifiers/xboost/src/Oracle/: DecisionStumpOracle.cpp
exercise_training_evaluation_classifiers/xboost/src/PostProcess/: CropBoost.cpp  PostProcessFactory.cpp  PostProcessFactory.h  SoftCascade.cpp
exercise_training_evaluation_classifiers/xboost/src/Preprocessor/: IntegralChannelImagePreprocessor.cpp
exercise_training_evaluation_classifiers/xboost/src/Trainer/: AdaBoostTrainer.cpp
v-charge-summerschool-cvg-code/image_based_localization/src/: CMakeLists.txt  P3P_RANSAC.cc  camera_pose.cc  kd_tree_localization.cc  localizer.cc  pose_solver.cc
vcharge_summer_school_cvg_data/: README.txt
(+1669 files in other folders)
